--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.7",
-    "expo-status-bar": "~2.0.0",
-    "react": "18.3.1",
-    "react-native": "0.76.2"
+    "@expo/metro-runtime": "~3.2.3",
+    "@react-navigation/native": "^7.0.3",
+    "@react-navigation/stack": "^7.0.3",
+    "expo": "^51.0.39",
+    "expo-image-picker": "~15.0.7",
+    "expo-sqlite": "~14.0.6",
+    "expo-status-bar": "~1.12.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
